# npec_phenotyping

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  Endpoint.ipynb  README.md  autopep8.py  dockerfile  email_test.ipynb  environment.yaml  flake8_remove_unused_imports.py  pyproject.toml  requirements.txt  setup.py
ACI/: Dockerfile  app.py  celery_config.py  data_loading.py  data_preprocessing.py  database.py  docker-compose.yml  evaluation_metrics.py  image_processing.py  instance_segmentation.py  landmarks_detection.py  mask_prediction.py  model_creation.py  model_training.py  pyproject.toml  requirements.txt  tasks.py  test.db
ACI/models/secondary_model/: fingerprint.pb  keras_metadata.pb
ACI/models/secondary_model/variables/: variables.index
ACI/results/: 006_43-17-ROOT1-2023-08-08_mock_pH5_f6h1_02-Fish Eye Corrected.png.html  013_43-18-ROOT1-2023-08-08_pvdCherry_OD01_f6h1_02-Fish Eye Corrected.png.html  020_43-18-ROOT1-2023-08-08_pvdCherry_OD01_Col0_01-Fish Eye Corrected.png.html
ACI/templates/: batch_results.html  index.html  result.html  train_result.html
airflow/: Dockerfile  compose.yaml  requirements.txt
kubernetes_deployment/: Cloud_architecture_implementation_plan 1.md  deployment_diagram 1.drawio
notebooks/: ingest_data_from_data_assets.ipynb
pipelines/: create_components.py  evaluate_pipeline_test.py  inference_pipeline.py  retraining_pipeline.py  training_pipeline.py
src/: README.md  data_loading.py  data_preprocessing.py  instance_segmentation.py  landmarks_detection.py  main.py  mask_prediction.py  model_creation.py  (+8 more)
(+19 files in other folders)
